# millenium-helpers

./: .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  flake.nix  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  packaging.yml
.github/workflows/: actionlint.yml  completions.yml  docs-crosslinks.yml  go.yml  homebrew.yml  labeler.yml  labels.yml  man-pages.yml  nix.yml  package-install-windows.yml  (+9 more)
Formula/: millennium-helpers-bin.rb  millennium-helpers.rb
docs/: README.md  licensing.md  mcp.md  release_runbook.md  security_troubleshooting.md  steam_deck.md  unification-audit.md  unification-roadmap.md  uninstall_dryrun.md
go/: go.mod
man/: millennium-diag.1  millennium-mcp.1  millennium-purge.1  millennium-repair.1  millennium-schedule.1  millennium-theme.1  millennium-upgrade.1  millennium.1
nix/: default.nix  release-info.nix
packaging/: .SRCINFO  PKGBUILD  README.md  millennium-helpers.install  millennium-helpers.sudoers
scripts/: common.sh  millennium-diag.sh  millennium-mcp.py  millennium-mcp.sh  millennium-purge.sh  millennium-repair.sh  millennium-schedule.sh  millennium-theme.sh  millennium-upgrade-beta.sh  millennium-upgrade-stable.sh  millennium-upgrade.sh  millennium.sh
spec/: cli-contract.yaml
tests/: run_tests.sh
(+309 files in other folders)
